--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "NODE_ENV=production webpack --config webpack.prod.js",
+    "build:dev": "webpack-dev-server --config webpack.dev.js",
     "start:dev": "webpack-dev-server --config webpack.dev.js",
     "heroku-postbuild": "webpack -p --config webpack.prod.js",
     "postinstall": "webpack -p --config webpack.prod.js",
@@ -20,6 +21,7 @@
     "cssnano": "^4.1.7",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "import-glob-loader": "^1.1.0",
+    "popper.js": "^1.14.6",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.27.1",
     "webpack-merge": "^4.1.4",
@@ -39,6 +41,7 @@
     "eslint": "^5.9.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
+    "exports-loader": "^0.7.0",
     "expose-loader": "^0.7.5",
     "express": "^4.16.4",
     "file-loader": "^3.0.1",
@@ -46,7 +49,6 @@
     "html-webpack-externals-plugin": "^3.8.0",
     "html-webpack-plugin": "^3.2.0",
     "inject-html-webpack-plugin": "^0.0.39",
-    "jquery": "^3.3.1",
     "node-sass": "^4.10.0",
     "postcss-loader": "^3.0.0",
     "resolve-url-loader": "^3.0.0",
